tests/valid_inputs/double_to_bool.cpp
// test that double converts to bool correctly

int main() {
	if(0.0)
		return 0;
	else if(3.14)
		return 42;
	return -1;
}
