tests/invalid_inputs/sema/private_method_access_02.cpp

class C {
	public:
	private:
	// test that access switching works correctly
	void private_method() {

	}
};

int main() {
	C c;
	c.private_method();
}
